# Lux-ray

./: .deepsource.toml  .env-sample  .gitignore  .replit  CODE_OF_CONDUCT.md  Procfile  README.md  app.json  basic_cmd_import.py  bot-config.toml  cog.py  config.py  exceptions.py  global_object.py  inited_cog.py  keep_alive.py  loading_message.json  lrb.py  main.py  main.sh  make_stable.py  prefixes.json  pyproject.toml  requirements-common.txt  requirements.txt  sample-.env  sample-bot-config.json  sample-bot-config.toml  sample-bot-token.json  sample-env  setup_python3.8+.py
core/: __init__.py  background.py  bot.py  checks.py  classes.py  cog.py  config.py  data.py  db.py  errors.py  exceptions.py  extensions.py  language.py  prefix.py  server.py  set_up.py  setup.py  start_up.py  start_up_message.json  tool.py  user.py
examples/: .env  config.toml
lang/: en.json  internal.json  lang_list.json  zh_TW.json
language/: en.json  language.py  zh-TW.json
locales/: en.toml  zh-TW.toml
lrb_backend/: api_event.py  error.py  event.py  ext_event.py
lrb_background/: api_event.py  error.py  event.py  ext_event.py  task.py
lrb_command/: admin.py  channel.py  common.py  dev.py  general.py  message.py  messages.py  msg.py  server.py  test.py
lrb_commands/: developer.py  exclusive_category.py  manage_messages.py  public.py  server_config.py  test.py
lrb_extension/: excl_cat.py
server_setting/: _default_server_setting.json
tool/: __init__.py  json_file.py  message.py  token.py
tools/: __init__.py  db_validator.py  dev.py  json_open.py  load.py  load_lang.py  (+6 more)
(+33 files in other folders)
